# backend/internal/application/model/application.go
@@ -1,0 +1,9 @@
+package model
+
+import (
+	"github.com/seregaa020292/capitalhub/internal/currency/model"
+)
+
+type Dashboard struct {
+	Currencies *[]model.Currency `json:"currencies"`
+}
