# backend/internal/auth/model/user.go
@@ -10,15 +10,15 @@ import (
 
 // User full model
 type User struct {
-	UserID    uuid.UUID `json:"user_id" db:"user_id" redis:"user_id" validate:"omitempty"`
+	UserID    uuid.UUID `json:"userId" db:"user_id" redis:"user_id" validate:"omitempty"`
 	Name      string    `json:"name" db:"name" redis:"name" validate:"required,lte=30"`
 	Email     string    `json:"email,omitempty" db:"email" redis:"email" validate:"omitempty,lte=60,email"`
 	Password  string    `json:"password,omitempty" db:"password" redis:"password" validate:"omitempty,required,gte=6"`
 	Role      *string   `json:"role,omitempty" db:"role" redis:"role" validate:"omitempty,lte=10"`
 	Avatar    *string   `json:"avatar,omitempty" db:"avatar" redis:"avatar" validate:"omitempty,lte=512,url"`
 	Confirmed *string   `json:"-" db:"confirmed"`
-	CreatedAt time.Time `json:"created_at,omitempty" db:"created_at" redis:"created_at"`
-	UpdatedAt time.Time `json:"updated_at,omitempty" db:"updated_at" redis:"updated_at"`
+	CreatedAt time.Time `json:"createdAt,omitempty" db:"created_at" redis:"created_at"`
+	UpdatedAt time.Time `json:"updatedAt,omitempty" db:"updated_at" redis:"updated_at"`
 }
 
 // Хеширование пароля пользователя с помощью bcrypt
@@ -76,11 +76,11 @@ func (u *User) PrepareUpdate() error {
 
 // Формат ответа, все пользователи
 type UsersList struct {
-	TotalCount int     `json:"total_count"`
-	TotalPages int     `json:"total_pages"`
+	TotalCount int     `json:"totalCount"`
+	TotalPages int     `json:"totalPages"`
 	Page       int     `json:"page"`
 	Size       int     `json:"size"`
-	HasMore    bool    `json:"has_more"`
+	HasMore    bool    `json:"hasMore"`
 	Users      []*User `json:"users"`
 }
 
