# backend/internal/instrument/model/instrument.go
@@ -8,9 +8,9 @@ import (
 
 // Instrument model
 type Instrument struct {
-	InstrumentID uuid.UUID `json:"instrument_id" db:"instrument_id" validate:"omitempty,uuid"`
+	InstrumentID uuid.UUID `json:"instrumentId" db:"instrument_id" validate:"omitempty,uuid"`
 	Title        string    `json:"title" db:"title" validate:"required"`
 	Description  string    `json:"description" db:"description" validate:"required"`
-	CreatedAt    time.Time `json:"created_at" db:"created_at"`
-	UpdatedAt    time.Time `json:"updated_at" db:"updated_at"`
+	CreatedAt    time.Time `json:"createdAt" db:"created_at"`
+	UpdatedAt    time.Time `json:"updatedAt" db:"updated_at"`
 }
